[tool.poetry]
name = "coke-waifus"
version = "0.1.0"
description = ""
authors = ["Jonathan Miller <jon@jmill.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
tweepy = "^4.12.1"
python-dotenv = "^0.21.0"
firebase-admin = "^6.0.1"
supervisor = "^4.2.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
ipykernel = "^5.3.3"
mypy = "^0.910"
pytest = "^6.2.4"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
notebook = "^6.4.4"

[tool.poetry.scripts]
read = "coke_waifus.read_service:main"
job = "coke_waifus.job_service:main"
reply = "coke_waifus.reply_service:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | nbs
)/
'''
