[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "coke_diffusion"
author = "Jonathan Miller"
author-email = "hello@bcad.one"
description-file = "README.md"
requires = ["tweepy", "python-dotenv", "firebase-admin"]

[tool.flit.metadata.requires-extra]
dev = ["black", "ipykernel", "mypy", "flake8", "pytest"]
